crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__models_inspect_success.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: snapshot_string(&success_json(&report))
---
{
  "data": {
    "model": {
      "display_name": "GPT-4o Mini",
      "input_cost_per_million": 1.25,
      "last_updated": null,
      "max_context_tokens": 128000,
      "max_output_tokens": 8192,
      "model_id": "gpt-4o-mini",
      "output_cost_per_million": 5.0,
      "qualified_id": "openai/gpt-4o-mini",
      "source": "built_in",
      "supports_json_schema": true,
      "supports_prompt_caching": true,
      "supports_thinking": false,
      "supports_tools": true,
      "supports_vision": false
    }
  },
  "error": null,
  "kind": "models.inspect",
  "schema_version": 1,
  "status": "success",
  "warnings": []
}
