crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__policy_explain_error.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: "snapshot_string(&error_json(\"POLICY_ERROR\", \"policy evaluation failed\",\nfalse))"
---
{
  "data": null,
  "error": {
    "code": "POLICY_ERROR",
    "correlation_id": null,
    "details": null,
    "message": "policy evaluation failed",
    "retryable": false
  },
  "kind": "error",
  "schema_version": 1,
  "status": "error",
  "warnings": []
}
