crates/gestalt-cli/tests/snapshots/h3b_snapshot_tests__profiles_inspect_error.snap
---
source: crates/gestalt-cli/tests/h3b_snapshot_tests.rs
expression: "snapshot_string(&error_json(\"CONFIG_ERROR\", \"profile 'missing' not found\",\nfalse))"
---
{
  "data": null,
  "error": {
    "code": "CONFIG_ERROR",
    "correlation_id": null,
    "details": null,
    "message": "profile 'missing' not found",
    "retryable": false
  },
  "kind": "error",
  "schema_version": 1,
  "status": "error",
  "warnings": []
}
